 * Lua API:
   * New wesnoth.unit_types[].advances_to getter.
   * New wesnoth.unit_types[].advances_from getter.
 * Multiplayer:
   * Dark Forecast: Fixed broken faction and leader selection.
 * Performance:
   * GUI2 windows no longer redraw everything 50 times per second. This reduces
     CPU usage in fullscreen windows such as MP lobby by about 85 %.
 * User Interface:
   * Removed broken Unit Box and Widescreen themes.
   * Fixed a bug that partially prevented movement feedback announce messages
     to be displayed (UI regression bug #2130, affecting 1.13.8 and 1.13.10).
   * New, greatly simplified display of games in the MP Lobby.
   * Fixed individual Join/Observe buttons acting on the wrong game in the MP
     Lobby.
   * Greatly improved behavior of sliders.
   * Fixed crash when modifying an existing friend entry in Preferences.
   * Fixed players being unable to start campaigns in MP mode.
 * WML Engine:
   * File paths with backslashes are no longer allowed. This ensures that a UMC
     author can't accidentally use them and make an add-on that breaks on
     GNU/Linux and macOS.
   * File paths are now case sensitive even on Windows.
   * [show_if] is now usable in [objectives] subtag [gold_carryover].
 * Miscellaneous and bug fixes:
   * Fixed ingame help showing units you haven't encountered (bug #2135)
   * Fixed the opacity IPF resetting to 0 if the value given was 100% or
     greater (bug #2185).

Version 1.13.10:
 * Add-ons client:
   * A list of illegal filenames is displayed if any are found by the server
     when uploading.
 * Add-ons server:
   * A list of illegal filenames is sent to the client if any are found during
     the upload validation process. Only clients supporting this new
     functionality can display the list.
   * Fix an issue where the implementation of the hashing function used for
     add-on passphrases was changed since 1.13.8, breaking existing hashes
     (bug #2068).
 * Campaigns:
   * Delfador's Memoirs: