@@ -28,6 +28,8 @@ Version 1.13.10+dev:
  * Performance:
    * GUI2 windows no longer redraw everything 50 times per second. This reduces
      CPU usage in fullscreen windows such as MP lobby by about 85 %.
+   * Miscellaneous low-level optimizations in game rendering code, improving
+     performance ingame by up to 50 %.
  * User Interface:
    * Removed broken Unit Box and Widescreen themes.
    * Fixed a bug that partially prevented movement feedback announce messages
